Assignment 2.1: Navigating Between Pages

--- a/Index.html
+++ b/Index.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<!-- Todays date January 21st, 2024-->
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>Meme Page - Home</title>
 </head>
+<link rel="stylesheet" href="main.css">
 <body>
-    <p>
 
-        <img id="memeImage" src="indy Jones MEME.png">
-    
-    </p>
+    <header>
+        <h1>Welcome to CSC 101</h1>
+    </header>
+    <!-- Image tag for displaying the meme -->
+    <img src="Indy Jones MEME.png" alt="Meme image"  style="width: 50%; height: auto;">
+    <nav>
+        <h2>Navigation</h2>
+        <a href="./index.html">Home</a><br>
+        <a href="border.html">Boards</a><br>
+    </nav>
+
+    <!-- footer infomation-->
+
+    <footer>
+        Isaac Oyedeji <br>
+        University of Advancing Technology<br>
+        2625 Baseline Road<br>
+        Tempe, Arizona 85283<br>
+    </footer>
+
 </body>
+
 </html>
