--- a/border.html
+++ b/border.html
@@ -12,5 +12,20 @@
     <!--uat catalog-->
     <div><p> The purpose of this course is to introduce the fundamentals of computer science and programming. Students will become familiar with problem solving techniques and algorithm development using computers, including a structured high-level programming language. Topics will include flow of control, assignment, arrays, functions, and input and output, among others</p></div>
 
+    <nav>
+        <h2>Navigation</h2>
+        <a href="Index.html">Home</a><br>
+        <a href="border.html">Boards</a><br>
+    </nav>
+
+    <!-- Footer -->
+
+    <footer>
+        Isaac Oyedeji <br>
+        University of Advancing Technology<br>
+        2625 Baseline Road<br>
+        Tempe, Arizona 85283<br>
+        <!-- Add anything else helpful or interesting -->
+    </footer>
 </body>
 </html>
