--- a/sample.html
+++ b/sample.html
@@ -7,6 +7,21 @@
 </head>
 <body>
     <h1>Heading 1</h1>
-    <h6>Heading 6</h6>   
-</body>
+    <h6>Heading 6</h6>  
+    <p> This is a paragraph </p>
+    
+    <!---Lists-->
+    <ul>
+        <li>Chair</li>
+        <li>Table</li>
+        <li>Cloth</li>
+    </ul>
+    <!--Table-->
+    <ul>
+        <li>Chair</li>
+        <li>Table</li>
+        <li>Cloth</li>
+    </ul>
+
+    </body>
 </html>
