--- a/border.html
+++ b/border.html
@@ -11,7 +11,7 @@
     <h2>Introduction to Programming</h2> 
     <!--uat catalog-->
     <div><p> The purpose of this course is to introduce the fundamentals of computer science and programming. Students will become familiar with problem solving techniques and algorithm development using computers, including a structured high-level programming language. Topics will include flow of control, assignment, arrays, functions, and input and output, among others</p></div>
-
+   <img>
     <nav>
         <h2>Navigation</h2>
         <a href="Index.html">Home</a><br>
